<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
             android:background="@color/blue"           >

    <ImageView
        android:id="@+id/figureImageView"
        android:layout_width="180dp"
        android:layout_height="243dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/picshape"
        android:src="@drawable/geometry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
    <!-- Заголовок -->

    <!-- Поле ввода логина -->

    <!-- Поле ввода пароля -->

    <!-- Кнопка "Регистрация" (она же вход) -->

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="339dp"
        android:layout_height="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/appname"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="375dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/text_Login"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="381dp"
        android:layout_height="57dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:hint="@string/text_Pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/green"
        android:text="@string/Regist"
        android:textSize="23dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>